tests/negative/abilities/with_non_context_intro.orng
// with_non_context_intro.orng:6:13: error: expected a context, got the type `Int`
//     with Int {
//            ^
// 
fn main() -> Int {
    with Int {
        3
    }
}
